# office-coding-agent

./: .gitignore  .prettierignore  .prettierrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.mjs  manifest.xml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  taskpane.html  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.integration.config.ts  webpack.config.js
.github/: copilot-instructions.md
.github/workflows/: pages.yml
docs/: TESTING_STRATEGY.md
manifests/: manifest.staging.xml
patches/: @assistant-ui+react+0.12.10.patch
scripts/: audit-tools.latest.json  bootstrap-tool-coverage-map.ts  check-tool-coverage.ts  generate-staging-manifest.mjs  kill-port.mjs  start-dev-server.mjs  test-copilot-ws.mjs  tool-coverage-golden-map.json  tool-coverage-map.json
src/: copilotProxy.mjs  server.js  server.mjs
src/components/: AgentPicker.tsx  ChatErrorBoundary.tsx  ChatHeader.tsx  McpManagerDialog.tsx  ModelManager.tsx  ModelPicker.tsx  SettingsDialog.tsx  SetupWizard.tsx  SkillPicker.tsx
src/hooks/: useOfficeChat.ts
src/lib/: websocket-client.ts  websocket-transport.ts
src/stores/: chatStore.ts  officeStorage.ts  settingsStore.ts
src/styles/: globals.css
src/taskpane/: App.tsx  index.tsx  taskpane.html
tests/: setup.ts  test-utils.tsx
tests-aitest/: conftest.py  excel_mcp.py  excel_sim.py  report.html  test_excel_tools.py  test_token_efficiency.py
tests-e2e/: runner.test.ts  test-context.ts  test-manifest.xml  test-taskpane.html  vite.config.ts
tests-ui/: fixtures.ts
(+89 files in other folders)
